<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    >



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/degradado_azul"
                >



                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width= "match_parent"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/ic_iconosvg"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "@string/app_name"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:textSize="25sp"
                    android:textColor="#fff"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "Versión 1"
                    android:id="@+id/version"
                    android:textAlignment="center"
                    android:padding="5dp"

                    />






                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_firma"
                android:id="@+id/ayuda_firma"
                android:textAlignment="center"
                android:padding="5dp"
                />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/traducidopor"

            android:textAlignment="center"
                android:padding="5dp"
            />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_donacion"
                android:id="@+id/ayuda_donacion"
                android:padding="5dp"
                android:textSize="@dimen/texto"

                />



            <Button
                android:text="@string/ir_al_canal_telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:onClick="sitio"

                android:background="@drawable/botonredondeado_lila"
                android:textColor="@android:color/white"
                android:layout_margin="5dp"
                />


            <Button
                android:text="@string/dona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:onClick="donar"
                android:background="@drawable/botonredondeado_lila"
                android:textColor="@android:color/white"
                android:layout_margin="5dp"
                android:id="@+id/ayuda_boton_donar"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_advertencia_proyecto"
                android:textColor="#ff0000"
                android:padding="5dp"
                android:textSize="@dimen/texto"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ayuda_descripcion"
                android:id="@+id/ayuda_descripcion"
                android:padding="5dp"
                android:textSize="@dimen/texto"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_licencia"
                android:id="@+id/ayuda_licencia"
                android:padding="5dp"
                android:textSize="@dimen/texto"
                />





            </LinearLayout>

        </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
