<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@drawable/caminoazul"
    android:padding="5sp"


    >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">









    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="@dimen/texto"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clave_nombre"
            android:textSize="@dimen/texto"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clave"
            android:textSize="@dimen/texto"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clave_clave"
            android:inputType="textPassword"
            android:textSize="@dimen/texto"
            />




        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1"
            >
            <TableRow>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registrarAplicacion"
                    android:onClick="clickRegistrarVersion"
                    android:background="@drawable/botonredondeado_verde"
                    android:textColor="#ffffff"
                    android:layout_margin="5dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sitioweb"
                    android:onClick="clickIrAlSitio"
                    android:background="@drawable/botonredondeado_verde"
                    android:textColor="#ffffff"
                    android:layout_margin="5dp"
                    />

            </TableRow>
        </TableLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_registrodeversion"
            android:layout_margin="5dp"
            android:textSize="@dimen/texto"
            />

    </LinearLayout>




</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
