<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@drawable/caminoazul"
    android:padding="5dp"

    >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:textAlignment="center"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/servidor"
            android:textSize="@dimen/texto"
            />

        <EditText
            android:id="@+id/sesion_servidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:background="@drawable/borderedondeado"
            android:inputType="textUri"
            android:padding="10sp"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/usuario"
            android:textSize="@dimen/texto"
            />

        <EditText
            android:id="@+id/sesion_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:background="@drawable/borderedondeado"
            android:inputType="textUri"
            android:maxLength="12"
            android:padding="10sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/clave"
            android:textSize="@dimen/texto"
            />

        <EditText
            android:id="@+id/sesion_clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:background="@drawable/borderedondeado"
            android:inputType="textPassword"
            android:maxLength="12"
            android:padding="10sp" />


        <TextView
            android:id="@+id/sesion_claverepetida_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/repetirclave"
            android:visibility="gone"
            android:textSize="@dimen/texto"
            />

        <EditText
            android:id="@+id/sesion_claverepetida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:background="@drawable/borderedondeado"
            android:inputType="textPassword"
            android:maxLength="12"
            android:padding="10sp"
            android:visibility="gone" />



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            >

            <ToggleButton
                android:id="@+id/opciones_ssl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssl"
                android:padding="5dp"
                android:textSize="@dimen/texto"
                />


        </LinearLayout>


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cambiarRadio">

            <RadioButton
                android:id="@+id/sesion_radio_iniciar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="cambiarRadio"
                android:text="@string/iniciarsesion"
                android:textSize="@dimen/texto"
                android:layout_margin="10dp"
                />

            <RadioButton
                android:id="@+id/sesion_radio_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cambiarRadio"
                android:text="@string/registrarse"
                android:textSize="@dimen/texto"
                android:layout_margin="10dp"
                />

        </RadioGroup>


        <TextView
            android:id="@+id/sesion_estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TableRow>

                <Button
                    android:id="@+id/sesion_boton_iniciar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2sp"
                    android:background="@drawable/botonredondeado_verde"
                    android:onClick="iniciar"
                    android:text="@string/iniciarsesion"
                    android:textColor="@android:color/white"

                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2sp"
                    android:background="@drawable/botonredondeadorojo"
                    android:onClick="cancelar"
                    android:text="@string/cancelar"
                    android:textColor="@android:color/white"

                    />

            </TableRow>
        </TableLayout>


    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
